bk_ida/gccida/g3/ix86_emit_restore_regs_using_mov
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_emit_restore_regs_using_mov/src/i386.c:4774:21: error: use of undeclared identifier 'machine_mode'
v9 = gen_rtx_MEM( ( machine_mode)v8, pointer); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_emit_restore_regs_using_mov/src/i386.c:4775:31: error: use of undeclared identifier 'machine_mode'
v10 = adjust_address_1( v9, ( machine_mode)v8, v12, 1, 1); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_emit_restore_regs_using_mov/src/i386.c:4776:22: error: use of undeclared identifier 'machine_mode'
v11 = gen_rtx_REG( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v4); 
                     ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_emit_restore_regs_using_mov/src/obj/i386.o] Error 1
